スムーススクロールの実装

--- a/index.html
+++ b/index.html
@@ -90,6 +90,44 @@
       <a href="#" class="card">
         <img class="card-img-top" src="img/ph_beaf.jpg">
         <div class="card-body">
+          <h5 class="card-title">近江牛</h5>
+          <table>
+            <tr>
+              <td>原産地： </td>
+              <td>岐阜県</td>
+            </tr>
+            <tr>
+              <td>値段： </td>
+              <td>8000 円 / kg</td>
+            </tr>
+          </table>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">この和牛の詳細を見る</small>
+        </div>
+      </a>
+      <a href="#" class="card">
+        <img class="card-img-top" src="img/ph_beaf.jpg">
+        <div class="card-body">
+          <h5 class="card-title">和牛</h5>
+          <table>
+            <tr>
+              <td>原産地： </td>
+              <td>岐阜県</td>
+            </tr>
+            <tr>
+              <td>値段： </td>
+              <td>8000 円 / kg</td>
+            </tr>
+          </table>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">この和牛の詳細を見る</small>
+        </div>
+      </a>
+      <a href="#" class="card">
+        <img class="card-img-top" src="img/ph_beaf.jpg">
+        <div class="card-body">
           <h5 class="card-title">和牛</h5>
           <table>
             <tr>
@@ -196,6 +234,12 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
+
+  <!-- スムーススクロールの実装 -->
+ <div id="page-top">
+  <a href="#"></a>
+</div>
+
 </body>
 
 </html>
